# criterion-example

./: Cargo.toml  README.md  build.rs  post_build.sh
artifacts/criterion/part1/base/: estimates.json  sample.json  tukey.json
artifacts/criterion/part1/new/: benchmark.json
artifacts/criterion/part1/report/: index.html
artifacts/criterion/part2/base/: benchmark.json  estimates.json
artifacts/criterion/part2/new/: sample.json  tukey.json
artifacts/criterion/part2/report/: index.html
artifacts/criterion/report/: index.html
artifacts/criterion/timv_1/base/: benchmark.json  estimates.json
artifacts/criterion/timv_1/new/: sample.json  tukey.json
artifacts/criterion/timv_1/report/: index.html
artifacts/criterion/timv_2/base/: estimates.json  sample.json
artifacts/criterion/timv_2/new/: benchmark.json  tukey.json
artifacts/criterion/timv_2/report/: index.html
benches/: bench_main.rs
benches/benchmarks/: mod.rs  part1_me.rs  part2_me.rs  third_party.rs  timv_1.rs  timv_2.rs
