[package]
name = "criterion-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.10.3"

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = true